# mlp-backend

./: .gitignore  pyproject.toml
app/: __main__.py  api.py  globals.py  metrics.py  parser.py  redis.py  settings.py
