[tool.poetry]
name = "mlp-backend"
version = "1.0.0"
description = ""
authors = ["None <none@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.5" }
uvicorn = "^0.32.1"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
pandas = "^2.2.3"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
html5lib = "^1.1"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
